--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,16 @@
 <body>
 
 <div class="container">
+  <% flash.each do |name, msg| %>
+    <div class="alert alert-<%= name %> fade in" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        <span class="sr-only">Close</span>
+      </button>
+      <%= content_tag(:div, msg) %>
+    </div>
+  <% end %>
+
   <%= yield %>
 </div>
 
