--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@project, @task] do |f| %>
+<%= simple_form_for [@project, @task] do |f| %>
   <% if @task.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
@@ -11,10 +11,18 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <fieldset class="form-group">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
-  </div>
+  </fieldset>
+
+  <fieldset class="form-group">
+    <%= f.simple_fields_for :assignments do |assignment| %>
+      <%= render 'assignment_fields', f: assignment %>
+    <% end %>
+    
+    <%= link_to_add_association 'Add Assignment', f, :assignments, class: "btn btn-default add-button" %>
+  </fieldset>
   <div class="actions">
     <%= f.submit %>
   </div>
