--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,22 +8,54 @@
 </head>
 <body>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-      <% flash.each do |name, msg| %>
-        <div class="alert alert-<%= name %> fade in" role="alert">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-            <span class="sr-only">Close</span>
-          </button>
-          <%= content_tag(:div, msg) %>
-        </div>
+<nav class="navbar navbar-dark bg-inverse">
+  <div class="container">
+    <a class="navbar-brand" href="#">GanttApp</a>
+    <ul class="nav navbar-nav">
+      <li class="nav-item">
+        <%= link_to "Home", root_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Projects", projects_path, class: "nav-link" %>
+      </li>
+      <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "Profile", edit_user_registration_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+        </li>
       <% end %>
-
-      <%= yield %>
-    </div>
+    </ul>
+    <ul class="nav navbar-nav pull-right">
+      <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "New project", new_project_path, class: "btn btn-info-outline" %>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Log in", new_user_session_path, class: "btn btn-info-outline" %>
+        </li>
+      <% end %>
+    </ul>
   </div>
+</nav>
+
+<div class="container">
+  <% flash.each do |name, msg| %>
+    <div class="alert alert-<%= name %> fade in" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        <span class="sr-only">Close</span>
+      </button>
+      <%= content_tag(:div, msg) %>
+    </div>
+  <% end %>
+
+  <%= yield %>
 </div>
 
 </body>
