--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,14 @@
   <title>GanttChart</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <%= csrf_meta_tags %>
 </head>
 <body>
 
 <nav class="navbar navbar-dark bg-inverse">
   <div class="container">
-    <a class="navbar-brand" href="#">GanttApp</a>
+    <a class="navbar-brand" href="#"><span class="fa fa-bar-chart"></span> GanttApp</a>
     <ul class="nav navbar-nav">
       <li class="nav-item">
         <%= link_to "Home", root_path, class: "nav-link" %>
