--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,3 +23,24 @@
 .navbar-brand {
   margin-right: 20px;
 }
+
+.btn-xs, .btn-group-xs > .btn {
+    padding: 0.15rem 0.55rem;
+    font-size: 0.75rem;
+    line-height: 1.5;
+    border-radius: 0.2rem;
+}
+
+@include media-breakpoint-up(sm) {
+  .card-columns {
+    column-count: 3;
+    -webkit-column-count: 3;
+    column-gap: 1.25rem;
+    -webkit-column-gap: 1.25rem;
+
+    .card {
+      display: inline-block;
+      width: 100%; // Don't let them exceed the column width
+    }
+  }
+}
