--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Project</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="card">
+      <div class="card-header">Edit project</div>
+      <div class="card-block">
+        <%= render 'form' %>
+      </div>
+    </div>
+  </div>
+</div>
