--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,27 +1,17 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Projects</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.name %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Project', new_project_path %>
+<div class="card-columns">
+  <% @projects.each do |project| %>
+  <div class="card">
+    <div class="card-block">
+      <h4 class="card-title"><%= link_to project.name, project_path(project) %></h4>
+    </div>
+    <div class="card-footer text-muted small">
+      <span data-toggle="tooltip" data-placement="top" title="<%= project.created_at.strftime('%d %B %Y') %>">
+        <span class="fa fa-clock-o"></span> <%= time_ago_in_words(project.created_at) %> ago
+      </span>
+      <div class="pull-right">
+        <span class="fa fa-sticky-note-o"></span> <%= pluralize(project.tasks.count, "entry") %>
+      </div>
+    </div>
+  </div>
+  <% end %>
+</div>
