--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,6 @@
-// Place all the styles related to the tasks controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.nested-fields {
+  background: #F5F5F5;
+  border-radius: 4px;
+  border: 1px solid #e5e5e5;
+  padding: 10px 15px;
+}
