--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,48 +2,14 @@
 <html>
 <head>
   <title>GanttChart</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<nav class="navbar navbar-dark bg-inverse">
-  <div class="container">
-    <a class="navbar-brand" href="#"><span class="fa fa-bar-chart"></span> GanttApp</a>
-    <ul class="nav navbar-nav">
-      <li class="nav-item">
-        <%= link_to "Home", root_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Projects", projects_path, class: "nav-link" %>
-      </li>
-      <% if user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to "Profile", edit_user_registration_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
-        </li>
-      <% end %>
-    </ul>
-    <ul class="nav navbar-nav pull-right">
-      <% if user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to "New project", new_project_path, class: "btn btn-info-outline" %>
-        </li>
-      <% else %>
-        <li class="nav-item">
-          <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Log in", new_user_session_path, class: "btn btn-info-outline" %>
-        </li>
-      <% end %>
-    </ul>
-  </div>
-</nav>
+<%= render 'shared/navigation' %>
 
 <div class="container">
   <% flash.each do |name, msg| %>
