--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -9,7 +9,7 @@
         <span class="fa fa-clock-o"></span> <%= time_ago_in_words(project.created_at) %> ago
       </span>
       <div class="pull-right">
-        <span class="fa fa-sticky-note-o"></span> <%= pluralize(project.tasks.count, "entry") %>
+        <span class="fa fa-sticky-note-o"></span> <%= pluralize(project.tasks.count, "task") %>
       </div>
     </div>
   </div>
