--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Task</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', project_tasks_path %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="card">
+      <div class="card-header">New task</div>
+      <div class="card-block">
+        <%= render 'form' %>
+      </div>
+    </div>
+  </div>
+</div>
