--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,18 @@
     border-radius: 0.2rem;
 }
 
+.alert-notice {
+  background-color: #dff0d8;
+  border-color: #d0e9c6;
+  color: #3c763d;
+}
+
+.alert-alert {
+    background-color: #f2dede;
+    border-color: #ebcccc;
+    color: #a94442;
+}
+
 @include media-breakpoint-up(sm) {
   .card-columns {
     column-count: 3;
